added images; completed mobile design; working on laptop

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
 
     <!-- header -->
     <header>
+        <div class="header-content">
+                <h1 class="headers">satchwerk</h1>
+                <p class="name">satchel page</p>
+                <p class=" text header-text">light being - husband - father - educator - builder - doer of stuff</p>
+        </div> 
         <div class="headerbackground">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="headers">satchwerk</h1>
-                        <p class="name">satchel page</p>
-                        <p class=" text header-text">light being - husband - father - educator - builder - doer of stuff</p>
                     </div>
                 </div>
+            </div>
+            <div class="banner">
+                <img src="media/headerbkgd2.jpeg" alt="banner" class="img-responsive banner-img visible-xs">
             </div>
         </div>
     </header>
@@ -49,13 +54,15 @@
         <!-- bio -->
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6 col-xs-12">
                     <div class="bio-section">
                         <h2 id="bio" class="headers">bio</h2>
                         <p class="text bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, ad, suscipit fugit laudantium eum impedit veritatis saepe assumenda dignissimos, non esse. Impedit id ipsum reiciendis commodi nostrum adipisci consectetur sint?</p>
-                        <img src="media/satchwerkheadshot.jpg" alt="placeholder img" class="img-responsive bio-img">
-                        
                     </div>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                        <img src="media/satchwerkheadshot.jpg" alt="placeholder img" class="img-responsive bio-img">
+
                 </div>
             </div>
             <!-- bio end -->
@@ -69,15 +76,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12 col-sm-6">
                     <figure id="fig1" class="projects">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12 col-sm-6">
                     <figure id="fig2" class="projects">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
@@ -85,15 +90,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <figure id="fig3" class="projects hidden-xs" >
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <figure id="fig4" class="projects hidden-xs">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
@@ -150,6 +153,7 @@
                             <ul class="contacts">
                                 <li><!-- email goes here-->email</li>
                                 <li><!-- social media here-->twitter</li>
+                                <li><!-- github goes here-->github</li>
                             </ul>
                         </div>
                     </div>
