completed mobile-to-web design

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <div class="bio-section">
                         <h2 id="bio" class="headers">bio</h2>
                         <p class="text bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, ad, suscipit fugit laudantium eum impedit veritatis saepe assumenda dignissimos, non esse. Impedit id ipsum reiciendis commodi nostrum adipisci consectetur sint?</p>
+                        <p class="text bio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi cupiditate ipsam, tempore dolores atque nemo deleniti recusandae corporis. Laudantium praesentium maiores obcaecati? Laboriosam neque voluptatibus qui tempore beatae nisi facere.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xs-12">
@@ -76,32 +77,56 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 col-md-3">
                     <figure id="fig1" class="projects">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 col-md-3">
                     <figure id="fig2" class="projects">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <figure id="fig3" class="projects hidden-xs" >
+                <div class="col-sm-6 col-md-3">
+                    <figure id="fig3" class="projects hidden-xs">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 col-md-3">
                     <figure id="fig4" class="projects hidden-xs">
                         <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
                         <figcaption>Lorem, ipsum.</figcaption>
                     </figure>
                 </div>
+            </div>
+            <div class="row hidden-xs hidden-sm">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <figure id="fig1" class="projects">
+                        <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
+                        <figcaption>Lorem, ipsum.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <figure id="fig2" class="projects">
+                        <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
+                        <figcaption>Lorem, ipsum.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <figure id="fig3" class="projects hidden-xs">
+                        <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
+                        <figcaption>Lorem, ipsum.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <figure id="fig4" class="projects hidden-xs">
+                        <img src="https://via.placeholder.com/200x150" alt="placeholder img" class="img-responsive">
+                        <figcaption>Lorem, ipsum.</figcaption>
+                    </figure>
+                </div>   
             </div>
             <div class="row">
                 <div class="col-sm-12">
@@ -110,7 +135,7 @@
             </div>
             <!-- portfolio end -->
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6 col-xs-12">
                         <!-- tools -->
                     <div class="tool-section">
                         <h2 class="headers">tools</h2>
@@ -123,9 +148,7 @@
                     </div>
                     <!-- tools end -->
                 </div>
-            </div> 
-            <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6 col-xs-12">
                         <!-- certs -->
                     <div class="cert-section">
                         <h2 class="headers">certs</h2>
@@ -148,7 +171,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="contact-secion">
+                        <div class="contact-section">
                             <h2 id="contacts" class="headers">contact me</h2>
                             <ul class="contacts">
                                 <li><!-- email goes here-->email</li>
