removed border-primary

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- past blog posts -->
                 <h2 class="past-blogs-title">past blogs</h2>
                 <div class="card-deck">
-                    <div class="card blog-card border-primary">
+                    <div class="card blog-card">
                         <div class="card-body">
                             <header class="card-header">
                                 <h3 class="card-title">blog title</h3>
@@ -74,7 +74,7 @@
                             </footer> 
                         </div>
                     </div>
-                    <div class="card blog-card border-primary">
+                    <div class="card blog-card">
                         <div class="card-body">
                             <header class="card-header">
                                 <h3 class="card-title">blog title</h3>
@@ -86,7 +86,7 @@
                             </footer> 
                         </div>
                     </div>
-                    <div class="card blog-card border-primary">
+                    <div class="card blog-card">
                         <div class="card-body">
                             <header class="card-header">
                                 <h3 class="card-title">blog title</h3>
@@ -126,7 +126,7 @@
         <section id="work" class="section work">
             <div class="container">
                 <div class="card-columns">
-                    <div class="card work-card border-primary">
+                    <div class="card work-card">
                         <img src="https://via.placeholder.com/250x200" alt="placeholder img" class="cardd-img-top img-fluid">
                         <div class="card-body">
                             <header class="card-header">
@@ -139,7 +139,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="card work-card border-primary">
+                    <div class="card work-card">
                         <img src="https://via.placeholder.com/250x200" alt="placeholder img" class="cardd-img-top img-fluid">
                         <div class="card-body">
                             <header class="card-header">
@@ -152,7 +152,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="card work-card border-primary">
+                    <div class="card work-card">
                         <img src="https://via.placeholder.com/250x200" alt="placeholder img" class="cardd-img-top img-fluid">
                         <div class="card-body">
                             <header class="card-header">
@@ -165,7 +165,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="card work-card border-primary">
+                    <div class="card work-card">
                         <img src="https://via.placeholder.com/250x200" alt="placeholder img" class="cardd-img-top img-fluid">
                         <div class="card-body">
                             <header class="card-header">
@@ -178,7 +178,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="card work-card border-primary">
+                    <div class="card work-card">
                         <img src="https://via.placeholder.com/250x200" alt="placeholder img" class="cardd-img-top img-fluid">
                         <div class="card-body">
                             <header class="card-header">
