completed about.html; started on contact.html

--- a/about.html
+++ b/about.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a6ddc4e9e0.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/a6ddc4e9e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>contact - satchwerk dot com</title>
+    <title>About Satch - satchwerk dot com</title>
 </head>
 <body>
-    <header id="header" class="header contact-page-header">
+    <header class="header about-page-header" id="header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 ">
+                <div class="col-md-12">
                     <nav class="topnav d-none d-md-block">
                         <ul class="nav justify-content-between">
-                            <li class="nav-item"><a href="about.html">about</a></li>
+                            <li class="nav-item"><a href="#bio">about</a></li>
                             <li class="nav-item"><a href="#portfolio">portfolio</a></li>
                             <li class="nav-item"><a href="#blog">blog</a></li>
                             <li class="nav-item"><a href="contact.html">contact</a></li>
@@ -38,62 +38,37 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
-                    <p class="slogan"><span class="outline">contact.</span></p>
+                <div class="col-md-12">
+                    <p class="slogan outline about-slogan">about.</p>
                 </div>
             </div>
-            <!-- /.row -->
         </div>
     </header>
-
-    <main class="main contact-section">
-        <section class="section container contact-section">
+    <main class="main" id="main">
+        <section class="section container about-section">
             <div class="row">
-                <h2 id="contact-header" class="contact-header">Contact Satch</h2>
-            </div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <p class="contact-text">Wanna reach out to me? Comments? Questions? Suggestsions?</p>
-                    <p class="contact-text">Just leave your info here with a message.</p>
-                    <blockquote class="blockquote badu">
-                        <p class="mb-0">"Now keep in mind I'm an artist...and I'm sensitive about my sh*t" - e.badu
-                        </p>
-                    </blockquote>
+                <div class="col-md-6">
+                    <div class="image">
+                        <img src="media/satch3.png" alt="placeholder img" class="img-fluid about-img">
+                    </div>
+                    <div class="pic-border d-none d-md-flex">
+                        <div class="box yellow-box"></div>
+                        <div class="box red-box"></div>
+                        <div class="box green-box"></div>
+                        <div class="box blue-box"></div>
+                    </div>
                 </div>
-                <div class="col-sm-9">
-                    <form action="#link" class="contact-form">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col">
-                                    <input type="text" class="form-control" placeholder="First Name - Required" value="" required>
-                                </div>
-                                <div class="col">
-                                    <input type="text" class="form-control" placeholder="Last Name" value="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="email" class="form-control" placeholder="Email - Required" value="" required>
-                                </div>
-                            </div>
-                            
-                        </div>
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="textarea-btn">Leave A Comment?</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <textarea name="comments" id="comment" cols="40" rows="10" placeholder="Thoughts?" class="textarea"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-primary contact-button">Submit</button>
-                        </div>
-                    </form>
+                <div class="col-md-6">
+                    <h2 class="about-header">about satchel</h2>
+                    <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, praesentium, repellat rerum voluptatum porro at, reiciendis ipsa harum saepe qui architecto? Fugiat similique dignissimos sapiente unde fugit, ipsam modi quos consequuntur temporibus quo aperiam architecto, ad placeat ex dolore iure.</p>
+                    <p class="about-text">Sunt accusantium dolorum iure quisquam ab libero saepe sequi! Eveniet ad dicta earum reprehenderit est, illum ratione suscipit blanditiis a voluptatem, error beatae omnis accusamus ipsam explicabo mollitia perferendis atque ex maiores. Impedit ullam voluptatum odit vitae praesentium veritatis necessitatibus?</p>
+                    <p class="about-text">In hic mollitia tempora corporis reiciendis asperiores consectetur doloribus veritatis ipsa dicta libero modi velit recusandae atque quidem natus impedit nemo fugit quaerat, optio, animi ipsum blanditiis? Quas veritatis ea reiciendis fugiat minima accusantium, sint quisquam nihil nemo obcaecati ducimus.</p>
+                    <div class="pic-border d-sm-flex d-md-none">
+                        <div class="box yellow-box"></div>
+                        <div class="box red-box"></div>
+                        <div class="box green-box"></div>
+                        <div class="box blue-box"></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -130,12 +105,8 @@
             <div class="box blue-box"></div>
         </section>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    
-
-    <script src="js/app.js"></script>
 </body>
 </html>
