fixed hamburger menu

--- a/about.html
+++ b/about.html
@@ -23,9 +23,18 @@
                         </ul>
                     </nav>
                     <nav class="hamburger d-sm-block d-md-none">
-                        <span class="slice"></span>
-                        <span class="slice"></span>
-                        <span class="slice"></span>
+                        <div id="menuToggle">
+                            <input type="checkbox" />
+                            <span class="slice"></span>
+                            <span class="slice"></span>
+                            <span class="slice"></span>
+                            <ul class="hamburger-list">
+                                <li class="hamburger-item"><a href="about.html">about</a></li>
+                                <li class="hamburger-item"><a href="#portfolio">portfolio</a></li>
+                                <li class="hamburger-item"><a href="#blog">blog</a></li>
+                                <li class="hamburger-item"><a href="contact.html">contact</a></li>
+                            </ul>
+                        </div>
                     </nav>
                 </div>
                 <div class="col-md-12">
