--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a6ddc4e9e0.js" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ultra&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>contact - satchwerk dot com</title>
 </head>
@@ -58,10 +59,12 @@
     <main class="main contact-section">
         <section class="section container contact-section">
             <div class="row">
-                <h2 id="contact-header" class="contact-header">Contact Satch</h2>
+                <div class="col-md-12">
+                    <h2 id="contact-header" class="contact-header">Contact Satch</h2>
+                </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-md-3">
                     <p class="contact-text">Wanna reach out to me? Comments? Questions? Suggestsions?</p>
                     <p class="contact-text">Just leave your info here with a message.</p>
                     <blockquote class="blockquote badu">
@@ -69,33 +72,29 @@
                         </p>
                     </blockquote>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-md-9">
                     <form action="#link" class="contact-form">
                         <div class="form-group">
                             <div class="row">
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="First Name - Required" value="" required>
+                                    <input type="text" class="form-control contact-input" placeholder="First Name - Required" value="" required>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="Last Name" value="">
+                                    <input type="text" class="form-control contact-input" placeholder="Last Name" value="">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="email" class="form-control" placeholder="Email - Required" value="" required>
+                                <div class="col-md-12">
+                                    <input type="email" class="form-control contact-input" placeholder="Email - Required" value="" required>
                                 </div>
                             </div>
-                            
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="textarea-btn">Leave A Comment?</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <textarea name="comments" id="comment" cols="40" rows="10" placeholder="Thoughts?" class="textarea"></textarea>
+                                <div class="col-md-12">
+                                    <textarea class="comments" name="comments" id="comment" cols="40" rows="10" placeholder="Thoughts?" class="textarea"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -141,8 +140,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     
 
     <script src="js/app.js"></script>
