--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a6ddc4e9e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -14,15 +14,16 @@
     <header class="header" id="header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 ">
+                <div class="col-md-12">
                     <nav class="topnav d-none d-md-block">
                         <ul class="nav justify-content-between">
-                            <li class="nav-item"><a href="about.html">about</a></li>
-                            <li class="nav-item"><a href="#portfolio">portfolio</a></li>
-                            <li class="nav-item"><a href="#blog">blog</a></li>
-                            <li class="nav-item"><a href="contact.html">contact</a></li>
+                            <li class="nav-item"><a href="about.html" class="nav-link">about</a></li>
+                            <li class="nav-item"><a href="#portfolio" class="nav-link">portfolio</a></li>
+                            <li class="nav-item"><a href="#blog" class="nav-link">blog</a></li>
+                            <li class="nav-item"><a href="contact.html" class="nav-link">contact</a></li>
                         </ul>
                     </nav>
+                    <!-- hamburger menu -->
                     <nav class="hamburger d-sm-block d-md-none">
                         <div id="menuToggle">
                             <input type="checkbox" />
@@ -39,17 +40,23 @@
                     </nav>
                 </div>
                 <div class="col-md-12">
-                    <a href="index.html">
-                        <h1 class="branding">
-                            <img src="media/WHITE_Satchwerk_FINAL.png" alt="placeholder img" class="img-fluid header-logo">
+                    <h1 class="branding">
+                            <a href="index.html">
+                            <img src="media/WHITE_Satchwerk_FINAL.png" alt="satchwerk" class="img-fluid header-logo">
                             <span class="sr-only">satchwerk</span>
-                        </h1>
-                    </a>
+                        </a>
+                    </h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p class="slogan">husband. father. developer. instructor. <span class="outline">doer of stuff.</span></p>
+                    <p class="slogan">
+                        <span class="slogan-text">husband.</span> 
+                        <span class="slogan-text">father.</span> 
+                        <span class="slogan-text">developer.</span> 
+                        <span class="slogan-text">instructor.</span> 
+                        <span class="outline">doer of stuff.</span>
+                    </p>
                 </div>
             </div>
             <!-- /.row -->
@@ -60,7 +67,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="media/satch2.png" alt="placeholder img" class="img-fluid bio-pic">
+                        <img src="media/satch2.png" alt="Satch" class="img-fluid bio-pic">
                     </div>
                     <div class="col-md-6">
                         <h2 class="bio-header">"Satch"</h2>
@@ -141,7 +148,7 @@
                 </div>
             </div>
         </section> 
-         <section class="section section3 blog" id="blog">
+        <section class="section section3 blog" id="blog">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
@@ -151,12 +158,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card-columns">
-                            <div class="card blog-card">
-                                <div class="card-body">
-                                    <h3 class="card-title blog-title">Blog Title</h3>
-                                    <p class="card-text blog-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut labore perspiciatis, rem molestias temporibus delectus.</p>
-                                </div>
-                                
+                            <a href="single-blog.html">
+                                <div class="card blog-card">
+                                    <div class="card-body">
+                                        <h3 class="card-title blog-title">Blog Title</h3>
+                                        <p class="card-text blog-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut labore perspiciatis, rem molestias temporibus delectus.</p>
+                                    </div>
+                            </a>    
                             </div>
                             <div class="card blog-card">
                                 <div class="card-body">
@@ -228,10 +236,18 @@
                     </div>
                     <div class="col-md-4">
                         <ul class="nav social-nav justify-content-around">
-                            <li class="nav-item"><a href="https://twitter.com/satchwerk" target="_blank" class="social"><i class="fab fa-twitter"></i></a></li>
-                            <li class="nav-item"><a href="https://github.com/bluesatch" target="_blank" class="social"><i class="fab fa-github"></i></a></li>
-                            <li class="nav-item"><a href="https://www.pinterest.com/bluesatch/_saved/" target="_blank" class="social"><i class="fab fa-pinterest"></i></a></li>
-                            <li class="nav-item"><a href="https://codepen.io/bluesatch" target="_blank" class="social"><i class="fab fa-codepen"></i></a></li>
+                            <li class="nav-item">
+                                <a href="https://twitter.com/satchwerk" target="_blank" class="social"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://github.com/bluesatch" target="_blank" class="social"><i class="fab fa-github"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://www.pinterest.com/bluesatch/_saved/" target="_blank" class="social"><i class="fab fa-pinterest"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://codepen.io/bluesatch" target="_blank" class="social"><i class="fab fa-codepen"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -245,8 +261,7 @@
         </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
 </body>
 </html>
